--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Semi-advances postgresql with rails</title>
+    <title>Cosas que hacer en PostgreSQL cuando estás Devops</title>
 
     <meta name="description" content="Semi-advanced postgresql with Rails">
     <meta name="author" content="Enrique García Cota">
@@ -45,21 +45,12 @@
         <section data-markdown data-separator="\*\*\*">
           <script type="text/template">
 
-<!-- .slide: data-background="./img/bg1.jpg" -->
-## Semi-advanced
-# PostgreSQL
-### With rails
+<!-- .slide: data-background="#000000" -->
 
-<div class="subtitle">
-<p>Enrique García ([@otikik](http://twitter.com/otikik))<p>
-<p><small>
-   **Conferencia Rails 2016**
-   <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img class="plain
-   text" src="./img/cc-by-nc-sa.png" title="Unless otherwise specified, everything here is licensed under CC-by-NC-SA"></a>
-   </small>
-</p>
+<figure class="stretch">
+  <img src="./img/cosas.jpg" class="stretch">
+</figure>
 
-</div>
 
 ***
 
@@ -101,7 +92,7 @@
   <a href="https://blog.codinghorror.com/vampires-programmers-versus-werewolves-sysadmins/">
     <img src="./img/coding-horror-vampires-vs-werewolves.png" class="stretch">
   </a>
-  https://blog.codinghorror.com/vampires-programmers-versus-werewolves-sysadmins/
+  <small>https://blog.codinghorror.com/vampires-programmers-versus-werewolves-sysadmins/</small>
 </figure>
 
 ***
@@ -118,8 +109,30 @@
 
 ***
 
+## 🎉 DevOps 🎉
+
+***
+
+<!-- .slide: data-background="#3D9970" -->
+
+> The best code is no code
+
+***
+
+<!-- .slide: data-background="#3D9970" -->
+
+> The best ops is no ops
+
+***
+
 <figure class="stretch">
-  <img src="./img/vampire.jpg" class="stretch plain">
+  <img src="./img/werewolf.jpg" class="stretch plain">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/werewolf.jpg" width="150" class="stretch plain">
 </figure>
 
 ***
@@ -128,7 +141,77 @@
 
 ***
 
-## A) “NoSQL”
+<!-- .slide: data-background="./img/trees.jpg" -->
+
+# A) “NoSQL”
+
+***
+
+<figure class="stretch">
+  <img src="./img/table.png" class="stretch">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/tree.png" class="stretch">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/mongodb.svg" class="stretch plain">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/couchdb.svg" width="3000" class="stretch plain">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/werewolf.jpg" width="150" class="stretch plain">
+</figure>
+
+***
+
+<!-- .slide: data-background="#000000" -->
+<figure class="stretch">
+  <img src="./img/demolition-man-title.png" class="stretch plain">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/stallone.jpg" class="stretch">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/demolition-man-frozen.jpg" class="stretch">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/demolition-man-future.png" class="stretch">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/demolition-man-shells.jpg" class="stretch">
+</figure>
+
+***
+
+<!-- .slide: data-background="#000000" -->
+<figure class="stretch">
+  <img src="./img/demolition-man-laugh.jpg" class="stretch plain">
+</figure>
 
 ***
 
@@ -142,6 +225,7 @@
 
 ``` ruby
 # db/migrate/*_create_api_requests.rb
+
 class CreateApiRequests < ActiveRecord::Migration
   def change
     create_table :api_requests do |t|
@@ -251,7 +335,8 @@ class CreateApiRequests < ActiveRecord::Migration
       t.jsonb :payload, null: false, default: '{}'
     end
 
-    add_index :api_requests, :payload, using: :gin # <=
+    add_index :api_requests, :payload, using: :gin ⬅️
+
   end
 end
 ```
@@ -311,7 +396,7 @@ gem "schema_plus_pg_indexes"
 ```ruby
 # Gemfile
 ...
-gem "schema_plus_pg_indexes" # v0.1.12
+gem "schema_plus_pg_indexes" # 0.2.1 (+ rails 5)
 ```
 ***
 
@@ -417,67 +502,145 @@ end
 
 ***
 
-## B) Full-text search
+<!-- .slide: data-background="./img/shells.jpg" -->
 
 ***
 
-TODO: find full-text logos
+<!-- .slide: data-background="./img/search.png" -->
 
-Apache Solr
-Sphinks
-
-***
-
-``` ruby
-# Gemfile
-gem 'pg_search'
-
-```
+# B) Full-text search
 
 ***
 
-* Multi-search
-* `pg_search_scope`
+<figure class="stretch">
+  <img src="./img/searchbar.gif" class="stretch">
+</figure>
 
 ***
 
-* ~~Multi-search~~
-* `pg_search_scope` 👍
+<figure class="stretch">
+  <img src="./img/solr.png" class="stretch plain">
+</figure>
 
 ***
 
-* `:against` option
-* `:tsvector_column` option
+<figure class="stretch">
+  <img src="./img/sphinx.png" class="stretch plain">
+</figure>
 
 ***
 
-* ~~`:against` option~~
-* `:tsvector_column` option  💖
+<figure class="stretch">
+  <img src="./img/werewolf.jpg" width="150" class="stretch plain">
+</figure>
 
 ***
 
-> You cannot dump a tsvector column to schema.rb
+<!-- .slide: data-background="#000000" -->
+
+<figure class="stretch">
+  <img src="./img/lotr.jpg" class="stretch plain">
+</figure>
 
 ***
 
-> You can~~not~~ dump a tsvector column to schema.rb
+<!-- .slide: data-background="./img/boromir.jpg" -->
 
 ***
 
-> You <u>should</u> dump a tsvector column to schema.rb
+<!-- .slide: data-background="./img/faramir.jpg" -->
+
+***
+
+## TSVector
+
+***
+
+## TSVector
+#### & TSQuery
 
 ***
 
 ```sql
 $ bin/rails dbconsole
-# select to_tsvector('fat cats ate fat rats');
-            to_tsvector
+# SELECT TO_TSVECTOR('fat cats ate fat rats');
+
+            TO_TSVECTOR
 -----------------------------------
  'ate':3 'cat':2 'fat':1,4 'rat':5
+```
+***
+
+``` ruby
+gem 'texticle'
+```
+
+***
+![tenderlove](./img/tenderlove.jpg)
+<3 <3
+***
+
+``` ruby
+gem 'textacular'
 ```
 
 ***
 
+``` ruby
+gem 'pg_search'
+```
+
+***
+``` SQL
+SELECT TO_TSVECTOR([fields]) @@ TO_TSQUERY('query')
+```
+
+***
+
+``` SQL
+SELECT TO_TSVECTOR(movies.title) @@
+       TO_TSQUERY('The Hobbit')
+```
+
+***
+
+``` SQL
+SELECT TO_TSVECTOR(movies.title) @@ ← ⏱ !
+       TO_TSQUERY('The Hobbit')
+```
+
+***
+
+``` SQL
+SELECT movies.tsv @@
+       TO_TSQUERY('The Hobbit')
+```
+***
+
+``` SQL
+SELECT movies.tsv @@ 👍 👍
+       TO_TSQUERY('The Hobbit')
+```
+
+
+***
+
+<!-- .slide: data-background="#FF4136" -->
+
+> You cannot dump a tsvector column to schema.rb
+
+***
+
+<!-- .slide: data-background="#FF4136" -->
+
+> You can~~not~~ dump a tsvector column to schema.rb
+
+***
+
+<!-- .slide: data-background="#3D9970" -->
+> You <u>should</u> dump a tsvector column to schema.rb
+
+***
 
 ```ruby
 # db/migrate/*_create_movies.rb
@@ -498,6 +661,29 @@ end
 ***
 
 ``` ruby
+
+class Movie < ActiveRecord::Base
+
+  include PgSearch
+
+  pg_search_scope :pg_search, {
+    against: {
+      title: 'A',
+      summary: 'B'
+    },
+    using: {
+      tsearch: { dictionary: "spanish" }
+    }
+  }
+
+end
+```
+
+***
+
+
+``` ruby
+
 class Movie < ActiveRecord::Base
 
   include PgSearch
@@ -506,8 +692,7 @@ class Movie < ActiveRecord::Base
     against: :ignored,
     using: {
       tsearch: { tsvector_column: 'tsv',
-                 dictionary: "spanish",
-                 prefix: true }
+                 dictionary: "spanish" }
     },
     ignoring: :accents,
     ranked_by: '(:tsearch)'
@@ -515,7 +700,6 @@ class Movie < ActiveRecord::Base
 
 end
 ```
-
 ***
 
 ``` ruby
@@ -538,8 +722,10 @@ class Movie < ActiveRecord::Base
   ...
 
   def update_tsvector_sql
+
     %{ UPDATE movies SET tsv = (
-        TO_TSVECTOR('spanish', #{quote(title)}) ||
+        TO_TSVECTOR('spanish', #{quote(title)})
+        || ' ' ||
         TO_TSVECTOR('spanish', #{quote(summary)})
     )}
   end
@@ -563,21 +749,22 @@ class Movie < ActiveRecord::Base
          SETWEIGHT(TO_TSVECTOR('spanish',
                                #{quote(title)}),
                    'A')
-         ||
+         || ' ' ||
          SETWEIGHT(TO_TSVECTOR('spanish',
                                #{quote(summary)}),
                    'B')
     )}
   end
 
-
 end
 
 ```
+
 ***
 
 ``` ruby
 .
+
 
 
 
@@ -597,12 +784,118 @@ end
 
 ```
 ***
+<small>
+https://github.com/consul/consul/blob/master/app/models/concerns/searchable.rb
+</small>
+<small>
+https://github.com/consul/consul/blob/master/app/models/concerns/search_cache.rb
+</small>
 
+``` ruby
+class Debate < ActiveRecord::Base
+  include Searchable
+  ...
 
-## C) Queues
+  def searchable_values
+    { title              => 'A',
+      author.username    => 'B',
+      tag_list.join(' ') => 'B',
+      geozone.try(:name) => 'B',
+      description        => 'D'
+    }
+  end
+end
 
+Debate.pg_search('potato')
+```
 
+***
 
+<!-- .slide: data-background="./img/queues.jpg" -->
+
+# C) Queues
+
+***
+
+<figure class="stretch">
+  <img src="./img/email.png" class="stretch plain">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/sidekiq.png" class="stretch">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/redis.png" class="stretch plain">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/werewolf.jpg" width="150" class="stretch plain">
+</figure>
+
+***
+
+<!-- .slide: data-background="./img/fawlty.jpg" -->
+
+***
+
+<figure class="stretch">
+  <img src="./img/manuel.jpg" class="stretch plain">
+</figure>
+
+***
+
+<!-- .slide: data-background="#0d0d0d" -->
+
+<figure class="stretch">
+  <img src="./img/manuel-que.jpg" class="stretch plain">
+</figure>
+
+***
+
+<!-- .slide: data-background="#FE0000" -->
+
+<figure class="stretch">
+  <img src="./img/manuel-que-2.jpg" class="stretch plain">
+</figure>
+
+***
+
+<figure class="stretch">
+  <img src="./img/que.png" class="stretch">
+</figure>
+
+https://github.com/chanks/que
+
+***
+
+<figure class="stretch">
+  <img src="./img/locks.png" class="stretch">
+</figure>
+
+***
+
+<!-- .slide: data-background="#FF851B" -->
+
+> Que's primary goal is reliability.
+
+***
+
+<!-- .slide: data-background="#FF851B" -->
+
+> Que's secondary goal is performance.
+
+***
+
+### Active Job
+
+#### rails >= 4.2
 
 ***
 
@@ -610,9 +903,33 @@ end
 
 ***
 
-<!-- .slide: data-background="./img/questions.jpg" -->
+* No-SQL
+* Full-text search
+* Queues
+
+***
+
+* [PostGIS](http://www.postgis.net/)
+* [ActiveRecord and PostgreSQL](http://edgeguides.rubyonrails.org/active_record_postgresql.html)
+  * XML
+  * UUID
+  * Ranges
+  * ...
+
+***
+
+<figure class="stretch">
+  <img src="./img/avoid-rails.png" class="stretch">
+</figure>
+
+<small>https://dockyard.com/blog/2014/05/27/avoid-rails-when-generating-json-responses-with-postgresql</small>
+
+***
 
 # ¿Preguntas?
+
+### Enrique García Cota
+### [@otikik](https://twitter.com/otikik) / [kikito](https://github.com/kikito)
 
 ***
 
@@ -636,8 +953,6 @@ end
 ### Advanced gems in general
 
 * http://www.brightball.com/articles/rails-gems-to-unlock-advanced-postgresql-features
-
-***
 
           </script>
         </section>
