--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@ https://github.com/chanks/que
 
 ***
 
-# ¿Preguntas?
+# ¿Questions?
 
 ### Enrique García Cota
 ### [@otikik](https://twitter.com/otikik) / [kikito](https://github.com/kikito)
